scss/_legal.scss
.tt-legal__masthead {
  margin-bottom: 50px;
  padding: 100px 30px;
  text-align: center;
  background-color: black;

  @media (min-width: 768px) {
    padding: 170px 30px;
  }

  h1 {
    margin: 0;
    padding: 0 15px;
    color: white;
    text-transform: uppercase;
  }
}

.wpautoterms-update-notice {
  font-size: 0.7em;
  border-bottom: 1px solid $tt-sand-transp;
  margin-top: 50px;
  padding: 15px 10px;
  text-align: center;
  background-color: $tt-dark-theme-bg-transp;
  color: white !important;

  a {
    color: $tt-rose;

    &:hover,
    &:focus {
      color: $tt-rose;
      text-decoration: none;
    }
  }
}

